# insert-csv-in-postgres

./: Cargo.toml  docker-compose.yml  test.csv
db/: local.Dockerfile
db/init/: init.sql
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: main.rs  schema.rs
