[package]
name = "insert-csv-in-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
diesel = { version = "2.0.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
postgres = "0.19.5"
serde = "1.0.160"
serde_derive = "1.0.160"
